[package]
name = "planet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
smooth-bevy-cameras = "0.2.0"
bevy-inspector-egui = "0.8"
rand = "0.8.5"
int-enum = "0.4.0"
enum-iterator = "0.7.0"